tests/ui/consts/required-consts/interpret-in-static.opt.stderr
error[E0080]: evaluation of `Fail::<i32>::C` failed
  --> $DIR/interpret-in-static.rs:8:19
   |
LL |     const C: () = panic!();
   |                   ^^^^^^^^ evaluation panicked: explicit panic

note: erroneous constant encountered
  --> $DIR/interpret-in-static.rs:16:9
   |
LL |         Fail::<i32>::C;
   |         ^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
